new design Done

--- a/Delmon Managment System/Form1.resx
+++ b/Delmon Managment System/Form1.resx
@@ -118,169 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAzJJREFUaEPt
-        WctqFEEU7cS3KwVREbPLRoIyM9XVY2KUoFufi2wUFP2BBN3LZCXJVPUEUTCoP+BKXAjGB6gRwaDRXxCX
-        vrKfzHhu5xKSngqZ6q6eMdAHDvRU3zr33u6qW9U1Xo4cOXLk2PQolycPSxleD3z9WEr9UQr9Q/r6T0S6
-        Rpvv60dkQ7bc7X9BpTcQ6iKCe42Al8BmmyTbV74fXvC8Zg+LdQdSqlMI5FssQHsK/VUINcyyncPAQGW7
-        FOE0gmi0BJWcjcAPQ9JmN9miUKjtwRx4bwjEDaV+Rz7YXTYgB9JXC8YAnFItZJYMvfJM30Qr3woxs43d
-        uwPPCZPDzIhSrdm9G1BFgbDLid0uG5gzQxxGWjR7nJTY5PzsZJ0JgvCSQbyjxBA7z+EkB6/YRgcd5CyH
-        kwzR3slu25EV68Xi5CEOyx54pTcMol1hIMJrHJY9ol2sQbQrlPohh2WPaCtuEu0O5zgse/D3hEm0G/zO
-        YdkDnRdjYpZUPzG2L2O7f4WuzTZt8y+HZQ90TpeIUBMshberJow27XORpeyRdmih6o2zFFXAcZONBVMM
-        rZST3XEiySd72vLrNJE05RfOUy2ILhPBQ73KUvagbQFEEm9RHCZSl3LqIEslQ5pNo7tE1EuWSQ46dzKL
-        b0xXiQQlfZZl0qDSC7EvcfF26CiReWcHeEEpPAlB67niIJEl36+dYAk3wFy5bXC0mveOl2pHVq/g6yYC
-        G7a9v9JmotBV7u4SNMTC50aHvm7099/dwYZeIPRNajclQve4yRsZqeykvqyxhrB/k8lxEGH46J29cPIh
-        7pQYlKqn2SyCFOEtbBbH+CfeqBqjNv4ZAYvcGZMWOEe+2Cwb4CntRjl81uJc6t/lkhJsFkEItY8v11wT
-        yJb6xHWw8D0dHAx3sVm2wJDYiies4HhtAUBgQtRKbLYuyMaQxFLgq6nR0Sdb2KxzoIqCAOZjAf3C+C6y
-        SQvoHtnE+nxCYq4O4pKi2YOKdg7BzIL15cDwESVrBTZYAbWt+sCqI6kXy4tdl//oiaNcnj5Apx2objM0
-        1vGU+/gWTew+agMf0AZw6Fh1P9/KkSNHjhybFZ73DyVZWKejwhKjAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAABGJJREFUaEPtWr9vHEUUPisoUYAEIfGjCKBIWAIuiuPz292zDZILRENqQ0os+AMc
-        hS5OLISEk9yMHUs0kUJFZwtR0ILkIoAobLcUKFGCEsmmggIbOz7ne+tn393uu7vZ3fP6QvJJn2Tvvnnz
-        vd15M29nrvAUTwI8z171PbsFbtfTI7vpk70gZt0PCP4zGsQeyS6JWXcjCGaP+56pqkGENOsjI5PPiHn3
-        Ihiwg3oANRKZt8U8fxBdf4Oocr6/f/ZluaQC+TGmiW+gP/2RmKvgPuBn3PPM63KpMyiXZ056ZO6wCHSw
-        ElDlrNyKATlQiQmPkswXYh6D75v3YXOf7TjXSiXbK7eygR3Fk9dUEZDt7Z09ImYh3js99SLu3Wq0jRNt
-        fxoevnpMmoUoFicP7zyESH6RvUd07U0xSwc9iBrxlpaDoFLkvIC473Htv6hNM6Ltv3gz3xLZ05438xYC
-        WNTsQmYJJgiuvNZyGt2j2dCvuxJvl+yafq+OCGZw0J4Qee7AE26ftHnTN5+IPHcQ3XgWr/531eHB8I9i
-        8evnRV4ylAcMZR862Ymht4mpvyyy0gFD7LLmPFeSnRA56cHlBGaYX9QO8iDZn0dH5w6JnGzgafgghhhP
-        0ZnXkHr4/syQ1lEO3EI5c0pkZAeS7Qelk6ZEXq1gxruIB9Df11d5jom6qcRjPbyntGlGtLspMrJhqK/y
-        Cs8aWicaIXQuWn7Ug+/Bbj7arhkxvP7GQnhUmruDvyfCUpzMZxBlkRu/aR1o5CAKhe0ecdUC2z2wdw4G
-        WhbAa/A/hpImaPWgeJqd4jJAdeRAtF9p2UEE8gG2qvlyo7nLmsVdDXiFD/UGjkROiCtnoM0l1ZcjWbO4
-        qgERtvg8bc8gsGfElTPCCUDx5U5TFVc1ZA0kTR0kia/6c+M+BJIkP3axkye6PzfuQyC8ZogrZ+zX0MpW
-        gqQo7DDrZCxIzYa4qgFP53OIWcLNdb1RayadfomuvIB2f0X9uBEaWWurXUuudvk7HIF9jOnxKzRqu5lQ
-        x3nnBZHsd0p7lagsfoSeL3kbqVyaeSfVBl/SEgWc5ySW5jGEbyJZEP+kKlE0JC0a8RZXebEjmh7gaZnJ
-        f0tOJBtOZL8RGdlxcGU8ZtJOlvFhziQbXh0h+lzjPS+RkQ28m4iaZlnrKB+aRd6FFDnpAWfTcec5k2xF
-        5KQDkfkgHKea81xpqvgO+VBkJQOCeAkOHuiO8ycvuOXy9VdFnjv4LERzeJBEMOMizx18sINZw2ET230H
-        XqfbJjZrYU0iLxnaHit45le22fnGD1frVMcKvHeF/5tuArIG7kdkpYMWDP7f5FU6WvPwQU8rQXsksxAt
-        MHk3EQ9jAm+ooQrvSBC7aDh6I3sb5ca7cisG2LSdrrkAFPMYsJJ7CDQ8BehoELsID348O8abbXJJRUD2
-        06jwKOHnnJir4CMN7ivVwU6n4FKXcSku5t2L/80PBhjRyaGBj8tPOBgY31MQ/fj/qOYpUqNQeAS0jWUl
-        2WiiHwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnNotifications.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAttJREFUaEPt
-        mT1oFEEUx48oCor4iVrYeVgYPMLNm12TWFxnKaipRC201sJKFDwrzd3MXgiBEARBsBAJKQQLsVDUwtZ0
-        0U5QEL8gHhoxRN9bH5dkd3Lh9uv2YH7wh8vM2/f+72Z3Z7NXsFgs3aNSqW50wLvgCHWRPvNw7yGlvipB
-        //UlvOs83HtgAw9ajYCe5uHeQwo9s9yIesTD+WdgoLFDSnXZAf0YzX9eboIl9Tds6CnFCKH28GH54diR
-        WzvR6ASqucp4ey0AqEnHmdjNaboLgHcCTX0MmOxA6guu0ElO1x3wGriEZpbC5jrWEp6O1zhttuDt9IrB
-        UDxhTk6fDQD1ChZeDBn5ryaAHnfL+ihtgnzqrRUb1KJTVse5TLoIcXs7FvwQMOALG3jiuqMHOLQF7u6v
-        TfFGSf1peHh0Gx+aHrRDGw2AulsoVPs4rIWUtf04/z0cv7bwC7nBh6cDfVNY6GuwsATv2cjIww0c5oN3
-        IkmnGM6H95P1NZ/qquB9/7Sh6O9y2StyCFLtw1Ubw/FYdzOqxQmTh06fUFGh7/O0jwOqFoqJIFzNe5wy
-        ebDAXLAgPabzNN4Iagdx7E8wJpKE95bTJg8WmA8X1DN0fZDw7+nQfEThBvmDyyaLEFNbTAVZ71mmuchK
-        5YKnhztTsTTlumP7uHxy2EZiyDbSDttIDNlG2mEbiaGUGtGHTMXSlOuqw1w+PsXi+GYp1E1M3MmrnqTU
-        pNrkge1EB//1vGMokLG8KbYTHUwUenTvgubYTnTwcfqdIXGmIg9sJzq2kQSVSCOYaDaYuAuaZTvRcYR3
-        HhMtBBJnqV+4IufYTjz6+6ub6KeDdsKCrwIG1hUafGnKtVJUm21kA4A6azLbVlKd4cPzg/8WReoXRsNm
-        PTe9Ys0FQ6X6XgDvjcH0KlEMxfJh+aRUqm9Fsw3Uz5XmWTTWoBgOzz+Dg94uAH3K/60dRZ9pjKctFkum
-        FAr/AMIGM5XhKYLPAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAAwdJREFUeF7tmD9oU1EUh5+jqIObf0DEMWKhvPfSEgoOOrgUJ1dxcnXy/9JB0Nr7
-        ooKLk+Ao3ZwdBHFRdBIncdO1g2ActJ4rvz7k+BNzkpzbR7kffJj2npvvedukSYpMJpPJZDKZLRYXm91L
-        J27vn59fPVRVw2N1PTxelmFJbp8Wl/tlc048X1XhonipLpsV+feO+EBuPxKfVFXztCqbZ3UVXsrtN3L7
-        fV2Gj/L1Z7n9DanuUVfNZgqR6x7sYj1Ernuwi51U+dW/Pje3tkceGjf0GnLdQ1/oNPZ6D/fG+xwMVvfp
-        td8xQQ5noNe8RZrDNkxq/MnHQ5Anv5t6DTk5gOakXvMWaQ7b4CFyRV2HU2zdU6Q5bIOHyMkBNGfYuqdI
-        c9gGD5FLwna2O0E+AMsB6GEvkUuCqa2HvUQuCaa2HvYSuSSY2np4GrvyUtjU1sPTOM5L4RSY2np4Gsd5
-        KZwCU1sPe4lcEkxtPewlckkwtfWwl8glYTvbncB8ADvtQ1HTAehhL5FLgqmth71ELgmmth72ErkkmNp6
-        2EvkkmBq62EvkUuCqa2HvUQuCaa2HvYSuSSY2nrYS+SSYGrrYS+RS4KprYe9RC4JprYe9hK5JJjaevjf
-        hpG8xr9clsOD0X4Zrsj3v/89x0WukPcFL9i6p0hz2AZm/M9jS4u8CbrKZpnYIgcQXrF1T5HmsA3U+u4B
-        bGmJ36OzRGyJB/CarXuKNIdtYMZfe2xpkbfRh9ksE1viAbxj65OIu2xhM1Esc9gGZnzMY0uLvN+/xmaZ
-        2NI92MVywygeQvzQJIrHv/lJsHOwi/UQuZaFhXtH4ydF4hc5zLfy27QuT7S35KF2Nh4wxvxhF+shci11
-        HS6wuS37/bUeRn1hcQ+Ra5Gf/GM211o2Kxj1hcYdRK5F/hp8YnN/+AGjvpCwi8jF3oZe+7/xk+bhclFs
-        7sLdzA4enL3Ixd5XvTau8iT5vCzvH8FdzQYW8hA56YURWze4Ef9S4O6mhwRcRC72fug1u+FnsifJTCaT
-        yWQymZ1DUfwCfLOnoJl+DS4AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnBilling.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAA25JREFUaEPt
-        mslrFEEUxtsFlyBuFxVERIIiQyCkqnoScBlQT+LNJCfR/0AFEUGUEUVj7OqJUQ/RgxcF8ah4EPWqBhFc
-        wA1BQUQFCR7MnjF+1b5MZnpqkpqkuwthHvyYnqpXr96X7tdd0xUnbILLy2AYjFuHyRfp9Pm1lJq5qUHa
-        gBZxuTxO6Zkb512bdMGswuRZSs/cohPiPQYPcPyqvK9KbAppbsptVvGE8Nt0/VVhTQjzPwjRuVrFc125
-        UQh5E+2DZX6mWBHC5PXW1tvzKFzBGMs1af1NSFyIkD8Y66mjUE4qlV1Ah4jrHdaOMSFxIUzepTCoDdmO
-        tjzaPgnmHcPx6xLfakj+jPiPKAwupZ46fD+J9l9lftVioUZGOPddChXYloZzK1D8XRpfc6wUO5ffcSb2
-        ULiC4fI6pfE1w5KQCXpddmE3hXUymewitPWHfMywI8S7g8+xwneRa6TQWIx67yb9qiBpIVjcfXac8TmM
-        +Q2Y/IQQ3sH6+u6FKq66FcPnd3iMEYmfkSkmdLl3VDvGBAuX1lc8Pw6k091LKZzT2Jhbzrk8g758yNcc
-        OzUSMDrxhIeIQ5r+6rAoRD0cUyj0DaiT09r+arAqJEpqQnTBbBKZECH78Iy4hM+OOMEtuhPzPSubPzoh
-        fht1x24tLf5iiOormT8qIfhRtI+6Yzf1DMKcpUv/CGukH8FuCO73xIqQ1zDX+9DctWKvCYmNmpDyYAPg
-        lrZAZwqTVxHzedEclYlKiMv8/dQdsWXnIv7074ajEoLnyF7qjtwQvzc8XxnRXVrez+CVjmZZMRuw7LlX
-        PpeGWrHrgtmkJkQXzCY1IZNBhnF3af/3EsEe+I2yktIztxIhQj6h5v/PQmdkEH+RnZlMdj51F0y1qS2D
-        JNFt6VW0CjWSd7n/FGdoB7k5qdSVJVgzfdH4xkk+2PYW/nZKo7JNU+xjxVsFEHZE45MEo1g27aI09DaN
-        EMVH9cbd0Dc2OJdvgoQrmUlyzc259cpX1Qm+z/zl9CxhLLcmSFpnaqNfN6gYxi6uU74k5E+4PynS6a5V
-        QdKVjHP/pW4g8ZbcHPVvGpr+RFA5UhqVTQhvG5yHwoPBSPGdi/bPwz5JMOQ2+VspjalNbTOjoO5jkNrA
-        VD91H7puroW6HcY6lqHtG9BNFBf9QU7CE5RGkTnOX7qmk50vY/cyAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnprinting.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAc5JREFUaEPt
-        lk1KA0EUhLPXK6gHEAJx0lmIHsFjuFDwJGZGXHgBf06j99BNXMdNtB0K8yapgVDp7oeQDz4Shul69UL+
-        Bjv+IyE0F2Fcv0a/ot8JnIeqvkJ8GbAEK7Oti0k1vcGY/IRQv5ESKVy0huYao/ISh6V6O3WNC8THcst0
-        hie0zQ71ZXzeLpP9bWaHpxTx5Zaxw1OK+JYiy9jhKUX8H9mXscNTivgOWZexw1OK+DWyLWOHp3Q4vN3D
-        iDWyfDXb4Ym9Oz5+2MeYNTrLpPg7YwZ7OkcdHRLqIurosFAPUUeHhXqIOjos1EPU0WGhHqKODgv1EHV0
-        WKiHqKPDQj1EHR0W6iHq6LBQD1FHh4V2DPVpVU3P7DUc3Rh7tk/cqsNCrb9LTE6ac3sNRzfGnu0Tt+qw
-        UA9RR4eFeog6OizUQ9TRYaEddx/2JfZsn7hVh4V6iDo6LNRD1NFhoR6ijg4L7bj7sC+xZ/vErTos1EPU
-        0WGhHqKODgv1EHV0WKiHqKPDQj1EHR0W6iHq6LBQD1FHJ/7gfbLgws5QRycu8kKCS/uEOjqj0fQoBn2s
-        BJf0Pb6YB6izHVV1fxiq+jmGzlaG5HQ2GTePyZbYUZTB4AcE94GVwo28pwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnemployee.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAxBJREFUaEPt
-        mb1rFEEYxmNEUVRQwcZK/EI8Dbmbmb3EqATsRNEmjaAoqH+BH6QQrlFJsrMnEkUrP1EUERUFwcovUNBG
-        0FQqgkVEY2EjGJP4THyLsPfe3e54zo54DzzFcfs+89vb+diZa2mqqX9MHR3lJVKGOwOhDyupy1JqrZTu
-        hTflcqWZdJmvKrUqFe1RQr8G/EQNfwgKegsV+aV8/uQiAD6PAdfyqJLhVdz4VorIXuvXHl8AsFcx0MQO
-        pL7X1dU3j+KyE7rSOQ4wjXEztyguG5lBDZCfcTArYyKgWPeSMjrIQlkYM9sVinUv0yU4KCsL/ZFi3QsA
-        1oOc8Xhma0yCNSOVzQxI0W6Fxhv5RCZyuVNzKdqt0PjLOIy1lf5Kse6lRHiNhbKx0i8o1r0wRo6wUHa+
-        RLHuFYhwOwNkZxXup1j3CkS0g4WyMNakXRTrXgB4Ggf6Az+hWPdC40MxGGvjFeUNxboXBvtNDsrSNyjW
-        vSZ3hDxUeiu9m2LdS4izMwDxsAIqrZV+lPle3gAAZrgCLrmHvTmQwBpwngFMZtRSTPaSstzFQiZwUIg2
-        UIwfwm7xLgda2+EDKvdH+XzfYsB9roSt6m9mz0/lfimQ0TMGuJqHqMw/AS7N/sTjG1H6NAPM2pwHU5l/
-        6uyMZk8ehTLgU42buODlYbaUA2vM6Tt9NOvKRryHXYbfA/w7+R3G0EU8tXV02eQrTrEYrqaP2alQiJYD
-        cBAehc2vPdjeXp5PX1cVntzCKd3wB/YiZ4QIV9HXrlRqNX8LAOQ+IMYIZorDLwYS3Wdzsdi/oq1tYI5x
-        EOiVps5A47qRyjo9btYVrEfbenquT6fGGi9zVAPAA2jwbQyg8UaXDGR4qMGn9BPTsDffi5v4xDb6N23a
-        VHqfYSAYO5kugcDbFQ04d3jHsBBWOpmpFP35MR+cgbFn6e4uzSK85FIiOsEGZujUi6gQ/ctQyMxImXtM
-        qfJSwqwvzBrHmBAvjEX1KGHWFwoaeV7VUJtxS5j1hQJuwfLFI4RZW79f/NgAb2w1ezXV1H+rlpZfP2bw
-        nnb3kO0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnvisa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABb9JREFUaEPt
-        WlmIHEUYHuMV8cBbPCKC8YA1y+5UVXeS9ViNiig+eCz6JCFeaDDmQVCUkEUDYXe6erKLBwmKRyJKPBB9
-        SLwfREMkGjQPKiai0bjihUjc1WyS9fuqqyc93TWTndmZ0Sz7w8fUX3/9f9XXdXdPbkqmZJJKe3vhSKWC
-        R5TSawlP6qesqSRS6mWxXUm92vPC66ypugix8lAhCr5SxcubBV/oSzs7B09ifTNnDh6OBq4DxgxgNw2B
-        SLniPOSNlGylMsH1tohbvHx4EQp+k3FsDnbhaS/N5XqntbU9dhT072z+CPKfRA8MAL/bvBSCF2yTsyLE
-        wJko9EfWqclQwb2sXwm9yGl3Qeg3TKNdgoCB06npCH5lr0hZuMBtd6AaEUy015xOLYAQwYlm4jtsTlTt
-        ERidTvsHhmPwJX5/BHYn8scN319xSltb72FGxxCTMrgC6b3Wvt3PF9o9GT5n9YYS+QoTciEm4wzrbmTO
-        nPAIpcJrYX8ZiBuyXySJ+H7/OYyFdLxavUUd9S2wekOIjKLx93GJtm4VxSzhUm9N+TvRaiJ/+yK8kmW5
-        9hun3NhBmFu3MOXlC5f5ft8ZTLNRJs979AT4fZyKk0FLicQNNquL0g8bHwwjVPAe07Qjxqs2/xJPBPcw
-        LUTxVOT/4IoZo5VE1rFMZ2ffaWyUJwrXGB8Zvl9GBPNCiP6ze3rWHoz0DhCeb8opfVMiVgZJIlKGNwsR
-        zkK6NNnNhqn041avnwiCe6ZMdN4ZZaUXzlp+HNMpIvs2OBU8A30nG8khiPQWY3cgScQivVCU6/UQQQO/
-        pZ1dDp0Bt5nySs+jPUtEP2/1h6x9GXX8LjV2BxxEqqOuHhF6jbXfRR0NepM61vVbrV5ORAYfUS8NJ6U3
-        GTsWg8ieRYLI57bXd1jbRuqo6yWkf2Ye6vlAieABxnRK5R4J+mnnHsHhxB2Yend373TqXV19R1OPh5vv
-        Dx5DnUs09Y6O4rHU7Uk2E5+IicQnYrsX/ZVc5kFoPvKGOExtllsqEcET76O9ViKwH1IrEaRf9IS+n71q
-        bEKvMjp6AHmbTR5Oxdj5b2RMp1QiAqymHYQWGl3p9dSxvN5GPTO0lN4Q2XWP9f/E6OMbWk57BnXNETu5
-        7RPlZN9qyvOSBLuDiJnseGoPRnq4nDriLzG6A60iMubnA2HKyPAV6KMcuxhqxyO9O00E+mJTVuinoQ9z
-        Q+S4xhL+Ge0ukAiP8uzFGPBf4yprUC+R2BFPewb0ITzlq6hzBUkR2RvtzL3TQPp72O6kDb83lMVLISJS
-        LnhQp7vKGtRNBOCOa8qpYgcaZvYG3p3LiQSvmzSuzJykTM9tL5wM//ga6wSJsJfxoDYR6MU8fTE8n3CV
-        nxARYJhnKJblCmacuGMrfTtTPFDOnl08i+nYzhULfh+m4mSQnSPB2zzmMAaHZtldhJggEeIfHgbjSqoJ
-        ew4N4oXLFacMzsmuwnc9L5SMlRmaDSASYwuCL4g3sFii4YHVLJqoe1I+FeEkEmEj4zaTSAw2FlfcYDPm
-        yNdIDyds48b/gUhDMEXEJZOdyKcIcjV39okCy/RcYMBRR/OJCBGcb80NE5DZkK6n6UTGs1/UKmjUs+l6
-        Dkgi9i5fVk8FInvQplX0OZCJ7MQQnGdd9l0RYtRKJHnVbJRkzk1AhojQi1jWvBaKXgP9VLJF9tqISFns
-        suaGCK+/iPtFuh4SSd5H+B7LfskyLxwyqJUIMGTuyyq4Y+II70a8d1LxDSIi5QKfi11lDeog0hKQSPI+
-        YiD1n+lyJVQjggk1ST70/Gef3vQvnB/2fa/LnkV1IuY+3vqPoXaFwl6x2Gl3oRoRClcpFNyWcWwOdqFB
-        S9gb9vP0dps/omS4Est0iPRvNi+FKp+nY+ESybfv5qbXJEhZ6Oa8sPVNx2hYX2pkciP09LnIy1zWxv3v
-        h1YJJziGVOkvGlhwGvcXjimZkolKLvcvGKX0eXQdOP0AAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="btnCloseChildForm.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAB0RJREFUaEPt
@@ -1248,6 +1085,9 @@
         RQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQB//9k=
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>104, 17</value>
+  </metadata>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
